@@ -2,8 +2,4 @@
 
 $plugin_cf['coco']['folder_data']="";
 
-$plugin_cf['coco']['search']="left, right"; // TODO: leave empty
-
-//$plugin_cf['coco']['enabled']="0";
-
 ?>
